--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -1,76 +1,76 @@
 # pkg:golang/github.com/hashicorp/consul/api@v1.12.0
-CVE-2022-29153 until=2023-06-30
-CVE-2022-24687 until=2023-06-30
-CVE-2021-41803 until=2023-06-30
+CVE-2022-29153 until=2023-07-30
+CVE-2022-24687 until=2023-07-30
+CVE-2021-41803 until=2023-07-30
 
 # pkg:golang/github.com/hashicorp/consul/sdk@v0.8.0
-CVE-2022-29153 until=2023-06-30
-CVE-2022-24687 until=2023-06-30
+CVE-2022-29153 until=2023-07-30
+CVE-2022-24687 until=2023-07-30
 # The latest version - v0.11.0 - at the time has the same issue present
-CVE-2021-41803 until=2023-06-30
+CVE-2021-41803 until=2023-07-30
 
 # pkg:golang/github.com/kataras/iris/v12@v12.1.8
 # This is the latest release at the moment
-CVE-2021-23772 until=2023-06-30
+CVE-2021-23772 until=2023-07-30
 
 # pkg:golang/github.com/urfave/negroni@v1.0.0
 # This library seems to be abandoned
-sonatype-2021-1485 until=2023-06-30
+sonatype-2021-1485 until=2023-07-30
 
 # pkg:golang/k8s.io/apiserver@v0.25.4
-sonatype-2022-6522 until=2023-06-30
+sonatype-2022-6522 until=2023-07-30
 
 # pkg:golang/helm.sh/helm/v3@v3.9.0
 # This is the latest release at the moment
-sonatype-2022-5277 until=2023-06-30
+sonatype-2022-5277 until=2023-07-30
 
 # pkg:golang/github.com/nats-io/jwt@v0.3.2
-CVE-2020-26892 until=2023-06-30
+CVE-2020-26892 until=2023-07-30
 
 # pkg:golang/github.com/mholt/archiver/v3@v3.5.0
 # imported from:
 #  - github.com/giantswarm/helmclient/v4
 sonatype-2022-0204 until=2022-09-30
-CVE-2021-3127 until=2023-06-30
+CVE-2021-3127 until=2023-07-30
 
 # pkg:golang/github.com/nats-io/jwt@v0.3.2
-CVE-2020-26892 until=2023-06-30
+CVE-2020-26892 until=2023-07-30
 
 # pkg:golang/github.com/containerd/containerd@v1.6.6
-CVE-2022-23471 until=2023-06-30
+CVE-2022-23471 until=2023-07-30
 
 # pkg:golang/golang.org/x/net@v0.2.0
-CVE-2022-41717 until=2023-06-30
+CVE-2022-41717 until=2023-07-30
 
 # pkg:golang/github.com/mholt/archiver/v3@v3.5.0
-sonatype-2021-0276 until=2023-06-30
+sonatype-2021-0276 until=2023-07-30
 
 # pkg:golang/helm.sh/helm/v3@v3.9.4
-CVE-2022-23524 until=2023-06-30
+CVE-2022-23524 until=2023-07-30
 
-CVE-2023-25165 until=2023-06-30
-CVE-2022-23525 until=2023-06-30
-CVE-2022-23526 until=2023-06-30
+CVE-2023-25165 until=2023-07-30
+CVE-2022-23525 until=2023-07-30
+CVE-2022-23526 until=2023-07-30
 
 sonatype-2021-0276 until=2022-12-30
 sonatype-2022-5277 until=2022-12-30
-sonatype-2022-5436 until=2023-06-30
+sonatype-2022-5436 until=2023-07-30
 
 # pkg:golang/golang.org/x/text@v0.3.7
-CVE-2022-32149 until=2023-06-30
+CVE-2022-32149 until=2023-07-30
+
+CVE-2022-41723 until=2023-07-30
+CVE-2023-27561 until=2023-07-30
+CVE-2023-25173 until=2023-07-30
+CVE-2023-25153 until=2023-07-30
+sonatype-2023-1010 until=2023-07-30
+
+CVE-2020-8561 until=2023-07-30
+CVE-2023-25809 until=2023-07-30
+CVE-2023-28642 until=2023-07-30
 
 # pkg:golang/github.com/gin-gonic/gin@v1.9.0
-CVE-2023-29401 until=2023-06-30
+CVE-2023-29401 until=2023-07-30
 
-# pkg:golang/google.golang.org/grpc@v1.52.0
-CVE-2023-32731 until=2023-06-30
-
-CVE-2022-41723 until=2023-06-30
-CVE-2023-27561 until=2023-06-30
-CVE-2023-25173 until=2023-06-30
-CVE-2023-25153 until=2023-06-30
-sonatype-2023-1010 until=2023-06-30
-
-CVE-2020-8561 until=2023-06-30
-CVE-2023-25809 until=2023-06-30
-CVE-2023-28642 until=2023-06-30
+# golang/google.golang.org/grpc@v1.52.0
+CVE-2023-32731 until=2023-07-30
