--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,10 +36,30 @@ workflows:
 
       - architect/integration-test:
           context: architect
-          name: basic-integration-test
+          name: basic-integration-test-vintage
           install-app-platform: false
           setup-script: "integration/setup/setup.sh"
-          test-dir: "integration/test/app/basic"
+          test-dir: "integration/test/app/vintage/basic"
+          requires:
+            - go-build
+            - push-app-operator-to-control-plane-app-catalog
+
+      - architect/integration-test:
+          context: architect
+          name: basic-integration-test-capi
+          install-app-platform: false
+          setup-script: "integration/setup/setup.sh"
+          test-dir: "integration/test/app/capi/basic"
+          requires:
+            - go-build
+            - push-app-operator-to-control-plane-app-catalog
+
+      - architect/integration-test:
+          context: architect
+          name: migration-integration-test-capi
+          install-app-platform: false
+          setup-script: "integration/setup/setup.sh"
+          test-dir: "integration/test/app/capi/migration"
           requires:
             - go-build
             - push-app-operator-to-control-plane-app-catalog
@@ -55,6 +75,15 @@ workflows:
 
       - architect/integration-test:
           context: architect
+          name: helmrepository-integration-test
+          setup-script: "integration/setup/setup.sh"
+          test-dir: "integration/test/catalog/helmrepository"
+          requires:
+            - go-build
+            - push-app-operator-to-control-plane-app-catalog
+
+      - architect/integration-test:
+          context: architect
           name: watching-configmap-integration-test
           setup-script: "integration/setup/setup.sh"
           test-dir: "integration/test/watcher/configmap"
@@ -64,9 +93,18 @@ workflows:
 
       - architect/integration-test:
           context: architect
-          name: workload-cluster-integration-test
+          name: workload-cluster-integration-test-capi
           setup-script: "integration/setup/setup.sh"
-          test-dir: "integration/test/app/workload"
+          test-dir: "integration/test/app/capi/workload"
+          requires:
+            - go-build
+            - push-app-operator-to-control-plane-app-catalog
+
+      - architect/integration-test:
+          context: architect
+          name: workload-cluster-integration-test-vintage
+          setup-script: "integration/setup/setup.sh"
+          test-dir: "integration/test/app/vintage/workload"
           requires:
             - go-build
             - push-app-operator-to-control-plane-app-catalog
