--- a/helm/app-operator/templates/configmap.yaml
+++ b/helm/app-operator/templates/configmap.yaml
@@ -15,6 +15,7 @@ data:
         address: 'http://0.0.0.0:{{ .Values.port }}'
     service:
       app:
+        helmControllerBackend: {{  .Values.app.helmControllerBackend }}
         unique: {{ include "resource.app.unique" . }}
         watchNamespace: '{{ .Values.app.watchNamespace }}'
         workloadClusterID: '{{ .Values.app.workloadClusterID }}'
