--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -35,6 +35,14 @@ rules:
 - apiGroups:
     - application.giantswarm.io
   resources:
+    - catalogs/status
+  verbs:
+    - create
+    - patch
+    - update
+- apiGroups:
+    - application.giantswarm.io
+  resources:
     - appcatalogs
   verbs:
     - create
@@ -86,6 +94,16 @@ rules:
     - secrets
   verbs:
     - "*"
+- apiGroups:
+    - source.toolkit.fluxcd.io
+  resources:
+    - helmrepositories
+  verbs:
+    - create
+    - delete
+    - get
+    - patch
+    - update
 {{- end }}
 - nonResourceURLs:
   - "/"
@@ -94,6 +112,37 @@ rules:
     - get
 ---
 {{- if eq .Release.Namespace "giantswarm" }}
+{{- if .Values.app.helmControllerBackend }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ include "resource.chart.name" . }}
+  labels:
+    {{- include "labels.common" . | nindent 4 }}
+rules:
+  # the first two are to be removed once CRDs and Chart permissions are
+  # not needed.
+  - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions
+    verbs:
+      - "*"
+  - apiGroups:
+      - helm.toolkit.fluxcd.io
+    resources:
+      - helmreleases
+    verbs:
+      - "*"
+  # This is needed for migration period for successful removal of
+  # Chart CR by the App Operator coupled with Helm Controller.
+  - apiGroups:
+      - application.giantswarm.io
+    resources:
+      - charts
+    verbs:
+      - "*"
+{{- else }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -113,6 +162,7 @@ rules:
       - charts
     verbs:
       - "*"
+{{- end }}
 {{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -166,6 +216,14 @@ rules:
     - create
     - patch
     - update
+{{- if .Values.app.helmControllerBackend }}
+- apiGroups:
+    - helm.toolkit.fluxcd.io
+  resources:
+    - helmreleases
+  verbs:
+    - "*"
+{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
