--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -8,6 +8,7 @@ port: 8000
 protocol: "TCP"
 
 app:
+  helmControllerBackend: false
   watchNamespace: ""
   workloadClusterID: ""
   dependencyWaitTimeoutMinutes: 30
