--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -21,6 +21,9 @@ CVE-2023-28642 until=2023-11-30
 CVE-2023-27561 until=2023-11-30
 CVE-2023-25809 until=2023-11-30
 
+# pkg:golang/golang.org/x/net@v0.7.0
+CVE-2023-3978 until=2023-11-30
+
 # pkg:golang/helm.sh/helm/v3@v3.10.3
 CVE-2023-25165 until=2023-11-30
 
