--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -23,6 +23,7 @@ CVE-2023-25809 until=2023-11-30
 
 # pkg:golang/golang.org/x/net@v0.7.0
 CVE-2023-3978 until=2023-11-30
+CVE-2023-39325 until=2023-11-30
 
 # pkg:golang/helm.sh/helm/v3@v3.10.3
 CVE-2023-25165 until=2023-11-30
