--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -1,31 +1,34 @@
 # pkg:golang/github.com/gin-gonic/gin@v1.9.0
-CVE-2023-29401 until=2023-11-30
+CVE-2023-29401 until=2024-01-31
 
 # pkg:golang/github.com/hashicorp/consul/api@v1.18.0
-CVE-2022-29153 until=2023-11-30
+CVE-2022-29153 until=2024-01-31
 
 # pkg:golang/github.com/hashicorp/consul/sdk@v0.8.0
-CVE-2022-29153 until=2023-11-30
-CVE-2021-41803 until=2023-11-30
-CVE-2022-24687 until=2023-11-30
+CVE-2022-29153 until=2024-01-31
+CVE-2021-41803 until=2024-01-31
+CVE-2022-24687 until=2024-01-31
 
 # pkg:golang/github.com/kataras/iris/v12@v12.1.8
-CVE-2021-23772 until=2023-11-30
+CVE-2021-23772 until=2024-01-31
 
 # pkg:golang/github.com/nats-io/jwt@v0.3.2
-CVE-2020-26892 until=2023-11-30
-CVE-2021-3127 until=2023-11-30
+CVE-2020-26892 until=2024-01-31
+CVE-2021-3127 until=2024-01-31
+
+# pkg:golang/golang.org/x/net@v0.10.0
+CVE-2023-39325 until=2024-01-31
 
 # pkg:golang/github.com/opencontainers/runc@v1.1.2
-CVE-2023-28642 until=2023-11-30
-CVE-2023-27561 until=2023-11-30
-CVE-2023-25809 until=2023-11-30
+CVE-2023-28642 until=2024-01-31
+CVE-2023-27561 until=2024-01-31
+CVE-2023-25809 until=2024-01-31
 
 # pkg:golang/golang.org/x/net@v0.7.0
-CVE-2023-3978 until=2023-11-30
+CVE-2023-3978 until=2024-01-31
 
 # pkg:golang/helm.sh/helm/v3@v3.10.3
-CVE-2023-25165 until=2023-11-30
+CVE-2023-25165 until=2024-01-31
 
 # pkg:golang/k8s.io/apiserver@v0.26.1
-CVE-2020-8561 until=2023-11-30
+CVE-2020-8561 until=2024-01-31
