--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,6 +170,19 @@ workflows:
 
       - architect/push-to-app-collection:
           context: architect
+          name: push-to-capz-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "capz-app-collection"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
           name: push-to-gcp-app-collection
           app_name: "app-operator"
           app_collection_repo: "gcp-app-collection"
