--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -28,7 +28,7 @@ groupID: 1000
 replicas: 1
 
 registry:
-  domain: docker.io
+  domain: gsoci.azurecr.io
 
 image:
   repository: giantswarm/app-operator
