--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@4.37.0
+  architect: giantswarm/architect@dev:update-abs-and-use-gsoci
 
 workflows:
   build:
