--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -3,3 +3,5 @@ CVE-2020-8561 until=2024-02-29
 
 # pkg:golang/helm.sh/helm/v3@v3.10.3
 CVE-2023-25165 until=2024-02-29
+CVE-2024-26147 until=2024-02-29
+CVE-2024-25620 until=2024-02-29
